[project]
name = "oura-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]