[project]
name = "oura-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.6",
]

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]
